# aigridmodel

./: .gitignore  ADVANCED_MODELS_GUI_PLAN.md  AUTONOMOUS_TESTING_PLAN.md  AUTONOMOUS_TESTING_README.md  CLASSICAL_MODELS_README.md  COMPREHENSIVE_SOLUTION_SUMMARY.md  Dockerfile.backend  FINAL_IMPLEMENTATION_SUMMARY.md  NEURAL_NETWORK_VISUALIZATION_PLAN.md  README.md  README_DEPLOYMENT.md  TEST_COVERAGE_REPORT.md  activate.sh  config.example  debug_imports.py  deploy.sh  dev.sh  docker-compose.yml  launch_api.py  launch_api.sh  monitor_servers.py  package-lock.json  pyproject.toml  quick_test_demo.py  railway 2.json  requirements.txt  run_api.py  run_autonomous_tests.py  run_comprehensive_tests.py  run_module.py  run_simple.py  schedule_tests.sh  setup.sh  start_api.py  start_api_direct.py  start_servers.sh  start_single_port.sh  start_streamlit.sh  streamlit_app.py  test_api.py  (+2 more)
.github/workflows/: autonomous-testing.yml
ai_grid_demo/: __init__.py  advanced_models.py  api.py  classical_models.py  cli.py  config.py
ai_grid_demo/training/: train_baseline.py  train_simple.py  train_spatiotemporal.py  train_utils.py
ai_grid_demo/viz/: __init__.py  plots.py
data/: grid_data_dataframes.pkl
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  server.js
frontend/src/: App.tsx  config.ts  setupProxy.js
models/: gnn_transformer.py  simple_baseline.py  simple_mlp.py
scripts/: evaluate_model.py  generate_data.py  start_api.py  train_model.py
tests/: test_data.py  test_models.py
tests/ui/: test_classical_model_workflow.py
(+14 files in other folders)
